{
    "name": "TitanInputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "ee05d020-a7d5-474c-829f-96a991de8d70",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "9a755560-5ae3-4ea3-8a27-58050173aaf2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "ff749e94-e764-4097-9fd2-cf2192b21e36",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "b1b2052a-7ed4-48ab-a3da-36c25acd4310",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Stomp",
                    "type": "Button",
                    "id": "a36ef7b3-6e45-475f-9eb8-bbb5addf79be",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3d803742-eea3-4584-b620-e302d0190be0",
                    "path": "<XRController>{LeftHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c9d65aa-6526-4789-ac2e-bfbee1a04f3a",
                    "path": "<XRController>{RightHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7b9ac08-9c45-4605-a101-2a0c232efeb5",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ad9a2418-c340-4bb0-b40c-17eb7233f5f6",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Stomp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}